--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -1,28 +1,8 @@
 <h1>Create a new Todo</h1>
 
-<%= form_for @todo do |f| %>
 
-<% if @todo.errors.any? %>
-	<h2>The following errors prevented the todo from being saved</h2>
-	<ul>
-		<% @todo.errors.full_messages.each do |msg| %>
-			<li><%= msg %></li>
-		<% end %>
-	</ul>
-<% end %>
+<%= render 'form' %>
+<%= link_to "Back to todos listing", todos_path %>
 
-<p>
-  <%= f.label :name %><br>
-  <%= f.text_field :name %>
-</p>
-
-<p>
-  <%= f.label :description %><br>
-  <%= f.text_area :description %>
-</p>
-
-<p>
-  <%= f.submit %>
-</p>
 
 <% end %>
